compiler/tests/liva/errors/e4004_module_not_found.liva
// Error Test: E4004 — Module file not found
// EXPECT: E4004
import { helper } from "nonexistent_module"

main() {
    print(helper())
}
